@@ -6,7 +6,7 @@
 	JToolBarHelper::title( JText::_( 'Plugin Manager' ), 'plugin.png' );
 	JToolBarHelper::publishList();
 	JToolBarHelper::unpublishList();
-	JToolBarHelper::editListX();
+	JToolBarHelper::editList();
 	JToolBarHelper::help( 'screen.plugins' );
 	$ordering = ($this->lists['order'] == 'p.folder' || $this->lists['order'] == 'p.ordering');
 	$rows =& $this->items;
